--- a/resources/styles/global/_global.scss
+++ b/resources/styles/global/_global.scss
@@ -1,8 +1,13 @@
+@import "_fonts.scss";
+@import "_variables.scss";
+@import "_mixins.scss";
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   font-size: inherit;
+  font-family: inherit;
   color: inherit;
   line-height: inherit;
 }
@@ -29,3 +34,7 @@
 img {
   max-width: 100%;
 }
+
+@import "../blocks/_page.scss";
+@import "../blocks/_page-header.scss";
+@import "../blocks/_page-footer.scss";
