--- a/resources/styles/global/_global.scss
+++ b/resources/styles/global/_global.scss
@@ -31,6 +31,14 @@
   margin: 0 auto;
 }
 
+.title {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 26px;
+}
+
 img {
   max-width: 100%;
 }
