--- a/resources/styles/global/_global.scss
+++ b/resources/styles/global/_global.scss
@@ -12,6 +12,10 @@
   line-height: inherit;
 }
 
+img {
+  max-width: 100%;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -39,8 +43,34 @@
   line-height: 26px;
 }
 
-img {
-  max-width: 100%;
+.button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  min-width: 40px;
+  min-height: 40px;
+  max-width: max-content;
+  text-decoration: none;
+  border: none;
+  background-color: $base-primary;
+  color: $base-white;
+  border-radius: 8px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  padding: 4px 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  transition: 0.3s;
+  cursor: pointer;
+
+  @include desktop {
+    &:hover {
+      background-color: $base-secondary;
+    }
+  }
 }
 
 @import "../blocks/_page.scss";
