makes global search

--- a/resources/styles/global/_global.scss
+++ b/resources/styles/global/_global.scss
@@ -76,3 +76,4 @@ img {
 @import "../blocks/_page.scss";
 @import "../blocks/_page-header.scss";
 @import "../blocks/_page-footer.scss";
+@import "../blocks/_search-modal.scss";
